--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -128,7 +128,7 @@
             <img src="/termite_static/img/component/powerme/top_default.png" style="padding: 80px 0;width: 150px;height: 110px;">
         </div>
         <div class="wui-i-body">
-            <div class="wui-i-timing">
+            <div class="wui-i-timing wa-timing">
                 <i></i>:
                 <b>03</b>天
                 <b>12</b>时
@@ -136,9 +136,9 @@
                 <b>21</b>秒
             </div>
             <div class="wui-i-btngroup">
-                <button class="wui-i-btn-closed">活动已结束</button>
-                <button class="wui-i-btn-notready">活动尚未开启,敬请期待</button>
-                <button class="wui-i-btn-using">我也要参加</button>
+                <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
+                <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
+                <button class="wui-i-btn-using wa-using wui-hide">我也要参加</button>
             </div>
             <div class="wui-i-description xa-description cl">
                 <div class="wui-i-description-content">
@@ -153,7 +153,7 @@
             </div>
             <div class="wui-i-states">
                 <div class="wui-i-title"><hr><i class="wui-i-star"></i><b>助力值TOP100</b><i class="wui-i-star"></i><hr></div>
-                <ul>
+                <ul class="wa-top100">
                     <li>
                         <span>排名</span>
                         <span>会员</span>
