--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -128,12 +128,14 @@
             <img src="/termite_static/img/component/powerme/top_default.png" style="padding: 80px 0;width: 150px;height: 110px;">
         </div>
         <div class="wui-i-body">
+            <div style="display: none" class="wui-i-start_time"></div>
+            <div style="display: none" class="wui-i-end_time"></div>
             <div class="wui-i-timing">
                 <i></i>:
-                <b>03</b>天
-                <b>12</b>时
-                <b>33</b>分
-                <b>21</b>秒
+                <b class="xa-day">00</b>天
+                <b class="xa-hour">00</b>时
+                <b class="xa-minute">00</b>分
+                <b class="xa-second">00</b>秒
             </div>
             <div class="wui-i-btngroup">
                 <button class="wui-i-btn-closed">活动已结束</button>
