--- a/weapp/termite/static/css/apps/powerme_orange.css
+++ b/weapp/termite/static/css/apps/powerme_orange.css
@@ -16,7 +16,7 @@
 .wui-i-description-content {
     color: #ce4000;
 }
-.wui-powerme-container .wui-i-masterinfo b{
+.wui-masterinfo b{
     color: #ff7d42;
     font-size: 15px;
 }
