--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -1,33 +1,31 @@
 {% extends "webapp_content_base_v4.html" %}
 
 {% block css %}
-<style type="text/css">
-	h1 {
-		color: #00F;
-	}
-	.xui-record {
-		margin: 10px 15px;
-		padding: 5px;
-		box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-		border-radius: 5px;
-	}
-	.xui-record .xui-inner-content {
-		color: #8F8F8F;
-	}
-	a.xui-button {
-		padding: 10px;
-		display: block;
-		text-align: center;
-		color: #FFF;
-		margin: 10px 15px;
-		background-color: rgba(0, 125, 255, 0.5);
-		border-radius: 10px;
-	}
+<style>
+	.wui-masterinfo{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 30px;
+        padding: 10px 0;
+        font-size: 12px;
+        line-height: 30px;
+        background-color: white;
+        border-top: 1px solid gainsboro;
+        opacity: 0.9;
+        text-align: center;
+    }
 </style>
 {% endblock %}
 
 {% block content-panel %}
     {{ page_html_content|safe }}
+    <div class="wui-masterinfo">
+        <span class="wa-myrange">我的排名: <b>{% if current_member_rank_info %}{{ current_member_rank_info.rank }}{% else %}无{% endif %}</b></span>
+        <span class="wa-mypower">我的助力值: <b>{% if current_member_rank_info %}{{ current_member_rank_info.power }}{% else %}0{% endif %}</b></span>
+        <span class="wa-totalcount">参与人数: <b>{{ total_participant_count }}</b></span>
+    </div>
 {% endblock %}
 
 {% block js %}
