--- a/weapp/termite/static/css/apps/powerme_red.css
+++ b/weapp/termite/static/css/apps/powerme_red.css
@@ -16,7 +16,7 @@
 .wui-i-description-content {
     color: #a00211;
 }
-.wui-powerme-container .wui-i-masterinfo b{
+.wui-masterinfo b{
     color: #e63041;
     font-size: 15px;
 }
