--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -16,7 +16,7 @@
 .wui-i-description-content {
     color: #7a7a7c;
 }
-.wui-powerme-container .wui-i-masterinfo b{
+.wui-masterinfo b{
     color: #fd5b0e;
     font-size: 15px;
 }
