--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -9,7 +9,11 @@
 {% ifequal component.type 'appkit.powermedescription' %}
     <div class="wui-powerme-container">
         <div class="wui-i-background-image">
-            <img src="/termite_static/img/component/powerme/top_default.png" style="padding: 80px 0;width: 150px;height: 110px;">
+            {% if component.model.background_image %}
+                <img src="{{ component.model.image }}">
+            {% else %}
+                <img src="/termite_static/img/component/powerme/top_default.png" style="padding: 80px 0;width: 150px;height: 110px;">
+            {% endif %}
         </div>
         <div class="wui-i-body">
             <div style="display: none" class="wui-i-start_time"></div>
@@ -59,8 +63,8 @@
         </div>
         <div class="wui-i-masterinfo">
             <span class="wa-myrange">我的排名: <b>124</b></span>
-            <span class="wa-mypower">我的助力值: <b>12343</b></span>
-            <span class="wa-totalcount">参与人数: <b>7231</b></span>
+            <span class="wa-mypower">我的助力值: <b>123</b></span>
+            <span class="wa-totalcount">参与人数: <b>72</b></span>
         </div>
     </div>
 {% endifequal %}
