--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -21,7 +21,7 @@
 
 {% block content-panel %}
     {{ page_html_content|safe }}
-    <div class="wui-masterinfo">
+    <div class="wui-masterinfo wa-masterinfo wui-hide">
         <span class="wa-myrange">我的排名: <b>{% if current_member_rank_info %}{{ current_member_rank_info.rank }}{% else %}无{% endif %}</b></span>
         <span class="wa-mypower">我的助力值: <b>{% if current_member_rank_info %}{{ current_member_rank_info.power }}{% else %}0{% endif %}</b></span>
         <span class="wa-totalcount">参与人数: <b>{{ total_participant_count }}</b></span>
@@ -31,7 +31,9 @@
 {% block js %}
 <script type="text/javascript">
     var participances = {% if participances_list %} {{ participances_list }} {% else %}false{% endif %};
-
+    var is_powered = {% if is_powered %}true{% else %}false{% endif %};
+    var is_self_page = {% if is_self_page %}true{% else %}false{% endif %};
+    var page_owner_name = '{{ page_owner_name }}';
     $(function(){
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
@@ -42,22 +44,51 @@
         //展示参与统计
         showTop100();
 
-        //检查活动状态
+        //检查活动状态,更新参与按钮并绑定事件
+        updateBtnStatus();
+
+        //启动倒计时
+        renderTime({{ timing }});
+
+        //展示与隐藏我的排名面板
+        showMyRank();
+    });
+
+    function updateBtnStatus(){
         if('进行中' != W.activityStatus){
             $('.wa-timing').hide();
             if('未开始' == W.activityStatus){
                 $('.wa-notready').show();
             }else{
-                $('.wa-wa-closed').show();
+                $('.wa-closed').show();
             }
             return false;
         }
+        //如果是自己的主页
+        if(is_self_page){
+            $('.wa-using').text('立即分享召唤小伙伴').on('click', openGuideMask).show();
+        }else{
+            var power_other_msg, using_msg;
+            if(is_powered){
+                power_other_msg = '已帮'+page_owner_name+'助力'
+            }else{
+                power_other_msg = '帮'+page_owner_name+'助力'
+            }
+            $('.wa-power').text(power_other_msg).on('click', function(){
+                openGuideMask();
+            }).show();
 
-        //启动倒计时
-        renderTime({{ timing }});
+            if(W.isAlreadyParticipanted){
+                using_msg = '您已参加该活动';
+            }else{
+                using_msg = '我也要参加';
+            }
+            $('.wa-using').text(using_msg).on('click', function(){
+                openGuideMask();
+            }).show();
+        }
 
-
-    });
+    }
 
     function showTop100(){
         if(participances){
@@ -72,6 +103,10 @@
 
     function renderTime(seconds){
         seconds = parseInt(seconds);
+        var $s = $('.xa-second');
+        var $m = $('.xa-minute');
+        var $h = $('.xa-hour');
+        var $d = $('.xa-day');
         var timer = window.setInterval(function(){
             if(seconds <= 0){
                 window.clearInterval(timer);
@@ -81,9 +116,23 @@
             var left_minites = seconds/60%60;
             var left_hours = seconds/60/60%24;
             var left_days = seconds/60/60/24;
-
+            $s.text(left_seconds);
+            $m.text(left_minites);
+            $h.text(left_hours);
+            $d.text(left_days);
             seconds--;
         },900);
+    }
+
+    function showMyRank(){
+        $('body').swipeUp(function(){
+            console.log('show my rank....');
+            $('.wa-masterinfo').show();
+        });
+    }
+
+    function openGuideMask(){
+
     }
 </script>
 {% endblock %}
