--- a/weapp/termite/static/css/apps/powerme_red.css
+++ b/weapp/termite/static/css/apps/powerme_red.css
@@ -32,3 +32,6 @@
 .wui-powerme-container .wui-i-title-content {
     background: #e63041;
 }
+.wui-powerme-container .wui-i-timing{
+    color: #fff;
+}
