--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -32,3 +32,6 @@
 .wui-powerme-container .wui-i-title-content {
     background: #FEF6C5;
 }
+.wui-powerme-container .wui-i-timing{
+    color: #666666;
+}
