--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -172,8 +172,7 @@
         }
         //如果是自己的主页
         if(is_self_page){
-            $('.wa-using').text('立即分享召唤小伙伴').on('click', showtwoDimensionBox).show();
-{#            $('.wa-using').text('立即分享召唤小伙伴').on('click', openGuideMask).show();#}
+            $('.wa-using').text('立即分享召唤小伙伴').on('click', openGuideMask).show();
         }else{
             var power_other_msg, using_msg;
             if(is_powered){
