--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -26,7 +26,6 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
         <i data-ui-role="goBack"></i>
         <div id="product" class="xui-section pt5 pb5" style="padding-right:0;">
             <div class="xui-section-title xui-section-item xui-pl0">
-                {% if cur_request_member %}
                 <div class="pr">
                     <div class="xui-productInfoBox">
                         <h2 class="xui-productName xt-productName xa-productName">{{ product.name }}</h2>
@@ -34,14 +33,16 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
                         <div class="xui-text-red em9" style="padding-top:2px;">{{ product.promotion_title|safe }}</div>
                         {% endif %}
                     </div>
-                    <a href="javascript:void(0);" class="xui-fav xa-collectProduct pa" data-is-collect="false">收藏</a>
+                    <a href="javascript:void(0);" class="xui-fav xa-collectProduct pa hide" data-is-collect="false">收藏</a>
                 </div>
-                {% else %}
-                <div class="disF">
+                {# jz 2015-10-29 #}
+                {#% if cur_request_member %#}
+                {#% else %#}
+                <!--div class="disF">
                     <h2 class="xui-productName xt-productName xa-productName">{{ product.name }}{% if product.promotion_title %}
                     <span class="xui-text-red">{{ product.promotion_title }}</span>{% endif %}</h2>
-                </div>
-                {% endif %}
+                </div-->
+                {#% endif %#}
                 <p class="xui-section-boldItemText xui-text-red xa-priceSection">
                     <span class="xui-vipPrice-num em85">￥<span class="xa-price xa-singlePrice fb em1">{{ price_info.min_price|format_float}}</span></span>
                 </p>
