update powerme mobile

--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -136,7 +136,7 @@
 
 {% block js %}
 <script type="text/javascript">
-    var participances = {% if participances_list %} {{ participances_list|safe }} {% else %}false{% endif %};
+    var participances = JSON.parse(JSON.stringify({{ participances_list|safe }}));
     var is_powered = {% if is_powered %}true{% else %}false{% endif %};
     var is_self_page = {% if is_self_page %}true{% else %}false{% endif %};
     var page_owner_name = '{{ page_owner_name }}';
