--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -6,6 +6,7 @@
 .wui-powerme-container .wui-i-body{
     background: #FEF6C5;
     padding: 10px 0;
+    margin-bottom: 40px;
 }
 .wui-powerme-container .wui-i-timing i{
     background-position: -49px 0;
