--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -20,10 +20,10 @@
             <div style="display: none" class="wui-i-end_time">{{component.model.end_time}}</div>
             <div class="wui-i-timing wa-timing">
                 <i></i>:
-                <b class="xa-day">{{component.model.timing_value.day}}</b>天
-                <b class="xa-hour">{{component.model.timing_value.hour}}</b>时
-                <b class="xa-minute">{{component.model.timing_value.minute}}</b>分
-                <b class="xa-second">{{component.model.timing_value.second}}</b>秒
+                <b class="xa-day">{% if component.model.timing_value.day %}{{component.model.timing_value.day}}{% else %}99{% endif %}</b>天
+                <b class="xa-hour">{% if component.model.timing_value.hour %}{{component.model.timing_value.hour}}{% else %}23{% endif %}</b>时
+                <b class="xa-minute">{% if component.model.timing_value.minute %}{{component.model.timing_value.minute}}{% else %}59{% endif %}</b>分
+                <b class="xa-second">{% if component.model.timing_value.second %}{{component.model.timing_value.second}}{% else %}59{% endif %}</b>秒
             </div>
             <div class="wui-i-btngroup">
                 <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
