--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -39,7 +39,7 @@
             <div class="wui-i-rules xa-rules">
                 <div class="wui-i-title">
                     <div class="wui-i-line"></div>
-                    <div class="wui-i-title-content">
+                    <div class="wui-i-rules-title-content">
                         <i class="wui-i-star"></i><b>活动规则</b><i class="wui-i-star"></i>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
             <div class="wui-i-states">
                 <div class="wui-i-title">
                     <div class="wui-i-line"></div>
-                    <div class="wui-i-title-content">
+                    <div class="wui-i-helper-title-content">
                         <i class="wui-i-star"></i><b>助力值TOP100</b><i class="wui-i-star"></i></div>
                     </div>
                 <ul class="wa-top100">
