--- a/weapp/termite/static/css/apps/powerme.css
+++ b/weapp/termite/static/css/apps/powerme.css
@@ -10,7 +10,7 @@ hr{
     width: 100%;
     height: auto;
     text-align: center;
-    font-family: "微软雅黑" !important;
+    font-family: "黑体" !important;
     text-align: center;
 }
 .wui-powerme-container>.wui-i-top{
@@ -26,7 +26,7 @@ hr{
 }
 .wui-powerme-container .wui-i-body div{
     margin-top: 15px;
-    font-family: "微软雅黑";
+    font-family: "黑体";
 }
 .wui-powerme-container .wui-i-body .wui-i-btngroup button{
     width: 80%;
@@ -83,9 +83,13 @@ hr{
     width: 90%;
     margin-left: 14px;
 }
-.wui-powerme-container .wui-i-title-content {
-    width: 57%;
-    margin-left: 22%;
+.wui-powerme-container .wui-i-rules-title-content {
+    width: 41%;
+    margin-left: 30%;
+}
+.wui-powerme-container .wui-i-helper-title-content {
+    width: 51%;
+    margin-left: 26%;
 }
 .wui-powerme-container .wui-i-timing i{
     background: url("/termite_static/img/component/powerme/icon_sprite.png") no-repeat;
@@ -101,4 +105,10 @@ hr{
     width: 33px;
     height: 17px;
     display: inline-block;
+}
+.wui-powerme-container .wui-i-rules b, .wui-powerme-container .wui-i-states b {
+    font-weight: normal;
+}
+.wa-top100 li{
+    font-weight: bold;
 }
