--- a/weapp/termite/static/css/apps/powerme_orange.css
+++ b/weapp/termite/static/css/apps/powerme_orange.css
@@ -29,9 +29,12 @@
 .wui-powerme-container .wui-i-line{
     border-bottom: 1px solid #9d3100;
 }
-.wui-powerme-container .wui-i-title-content {
+.wui-powerme-container .wui-i-rules-title-content,.wui-powerme-container .wui-i-helper-title-content{
     background: #ff7d42;
 }
 .wui-powerme-container .wui-i-timing{
     color: #fff;
+}
+.wa-top100 li{
+    color: #642100;
 }
